--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-nativ
 tokio = { version = "1.25.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+uuid = { version = "1.3.0", features = ["v7"] }
