--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.9"
+argon2 = { version = "0.4.1", features = ["parallel"] }
+axum = { version = "0.6.9", features = ["macros", "headers"] }
+futures = "0.3.26"
+jwt-simple = "0.11.4"
+once_cell = "1.17.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-native-tls", "time"] }
+thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["full"] }
+tower = "0.4.13"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 uuid = { version = "1.3.0", features = ["v7"] }
+validator = { version = "0.16.0", features = ["derive"] }
