--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,30 @@ edition = "2021"
 
 [dependencies]
 argon2 = { version = "0.4.1", features = ["parallel"] }
-axum = { version = "0.6.9", features = ["macros", "headers"] }
+async-trait = "0.1.66"
+aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
+aws-sdk-s3 = "0.24.0"
+aws-smithy-http = "0.54.4"
+axum = { version = "0.6.9", features = ["macros", "headers", "multipart"] }
+bytes = "1.4.0"
+derive_builder = "0.12.0"
 futures = "0.3.26"
+futures-util = "0.3.26"
+http-body = "0.4.5"
 jwt-simple = "0.11.4"
 once_cell = "1.17.1"
+pin-project-lite = "0.2.9"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-native-tls", "time"] }
+sync_wrapper = "0.1.2"
+tempfile = "3.4.0"
 thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["full"] }
+tokio-util = { version = "0.7.7", features = ["compat", "io"] }
 tower = "0.4.13"
+tower-http = { version = "0.4.0", features = ["trace"] }
 tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 uuid = { version = "1.3.0", features = ["v7"] }
 validator = { version = "0.16.0", features = ["derive"] }
