--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,5 +32,5 @@ tower = "0.4.13"
 tower-http = { version = "0.4.0", features = ["trace"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-uuid = { version = "1.3.0", features = ["v7"] }
+uuid = { version = "1.3.0", features = ["v7", "serde"] }
 validator = { version = "0.16.0", features = ["derive"] }
