--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,10 @@ thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["full"] }
 tokio-util = { version = "0.7.7", features = ["compat", "io"] }
 tower = "0.4.13"
-tower-http = { version = "0.4.0", features = ["trace"] }
+tower-http = { version = "0.4.0", features = ["trace", "limit"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+utoipa = { version = "3.1.0", features = ["axum_extras", "uuid"] }
+utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
 uuid = { version = "1.3.0", features = ["v7", "serde"] }
 validator = { version = "0.16.0", features = ["derive"] }
