--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tower = "0.4.13"
 tower-http = { version = "0.4.0", features = ["trace", "limit"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b8", features = ["serde-compat", "uuid-impl"] }
 utoipa = { version = "3.1.0", features = ["axum_extras", "uuid"] }
 utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
 uuid = { version = "1.3.0", features = ["v7", "serde"] }
