--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,14 @@ bytes = "1.4.0"
 derive_builder = "0.12.0"
 futures = "0.3.26"
 futures-util = "0.3.26"
+garde = "0.4.0"
 http-body = "0.4.5"
 jwt-simple = "0.11.4"
 once_cell = "1.17.1"
 pin-project-lite = "0.2.9"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
-sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-native-tls", "time"] }
+sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-rustls", "time"] }
 sync_wrapper = "0.1.2"
 tempfile = "3.4.0"
 thiserror = "1.0.38"
@@ -36,4 +37,3 @@ ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b8", feature
 utoipa = { version = "3.1.0", features = ["axum_extras", "uuid"] }
 utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
 uuid = { version = "1.3.0", features = ["v7", "serde"] }
-validator = { version = "0.16.0", features = ["derive"] }
