--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,22 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/kit": "^1.15.5",
 		"@types/cookie": "^0.5.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"autoprefixer": "^10.4.14",
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.2.0",
+		"svelte-hamburgers": "^4.0.1",
+		"sveltekit-superforms": "^0.6.18",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"vite": "^4.2.1",
+		"zod": "^3.21.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"svelte-fa": "^3.0.3"
+	}
 }
