--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,28 @@
 [package]
-name = "rmusawarah"
+name = "musawarah"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = [".", "migration"]
+
 [dependencies]
+migration = { path = "migration" }
+
 argon2 = { version = "0.4.1", features = ["parallel"] }
 async-trait = "0.1.66"
 aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
 aws-sdk-s3 = "0.24.0"
 aws-smithy-http = "0.54.4"
-axum = { version = "0.6.9", features = ["macros", "headers", "multipart"] }
+axum = { version = "0.6.16", features = ["macros", "headers", "multipart"] }
 bytes = "1.4.0"
 derive_builder = "0.12.0"
 dotenv = "0.15.0"
 futures = "0.3.26"
 futures-util = "0.3.26"
-garde = "0.6.1"
+garde = "0.11.2"
 http-body = "0.4.5"
 jwt-simple = "0.11.4"
 once_cell = "1.17.1"
@@ -25,6 +30,13 @@ pin-project-lite = "0.2.9"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-rustls", "time"] }
+sea-orm = { version = "0.11.2", default-features = false, features = [
+    "runtime-tokio-rustls",
+    "sqlx-postgres",
+    "with-json",
+    "with-chrono",
+    "with-uuid",
+] }
 sync_wrapper = "0.1.2"
 tempfile = "3.4.0"
 thiserror = "1.0.38"
@@ -37,4 +49,9 @@ tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b8", features = ["serde-compat", "uuid-impl"] }
 utoipa = { version = "3.1.0", features = ["axum_extras", "uuid"] }
 utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
+# v7 uuid allows for easier sorting
 uuid = { version = "1.3.0", features = ["v7", "serde"] }
+rand = "0.8.5"
+axum_garde = "0.11.2"
+chrono = "0.4.24"
+itertools = "0.10.5"
