--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ futures = "0.3.26"
 futures-util = "0.3.26"
 garde = "0.11.2"
 http-body = "0.4.5"
-jwt-simple = "0.11.4"
 once_cell = "1.17.1"
 pin-project-lite = "0.2.9"
 serde = { version = "1.0.152", features = ["derive"] }
@@ -55,3 +54,5 @@ rand = "0.8.5"
 axum_garde = "0.11.2"
 chrono = "0.4.24"
 itertools = "0.10.5"
+axum-login = "0.5.0"
+eyre = "0.6.8"
