--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,23 @@ edition = "2021"
 [workspace]
 members = [".", "migration"]
 
+[workspace.dependencies]
+sea-orm = { version = "0.11.2", default-features = false, features = [
+    "runtime-tokio-rustls",
+    "sqlx-postgres",
+    "with-json",
+    "with-chrono",
+    "with-uuid",
+] }
+uuid = { version = "1.3.0", features = ["v7", "serde"] }
+chrono = "0.4.24"
+
 [dependencies]
 migration = { path = "migration" }
 
+uuid = { workspace = true }
+chrono = { workspace = true }
+sea-orm = { workspace = true }
 argon2 = { version = "0.4.1", features = ["parallel"] }
 async-trait = "0.1.66"
 aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
@@ -29,13 +43,6 @@ pin-project-lite = "0.2.9"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-rustls", "time"] }
-sea-orm = { version = "0.11.2", default-features = false, features = [
-    "runtime-tokio-rustls",
-    "sqlx-postgres",
-    "with-json",
-    "with-chrono",
-    "with-uuid",
-] }
 sync_wrapper = "0.1.2"
 tempfile = "3.4.0"
 thiserror = "1.0.38"
@@ -49,12 +56,11 @@ ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b8", feature
 utoipa = { version = "3.1.0", features = ["axum_extras", "uuid"] }
 utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
 # v7 uuid allows for easier sorting
-uuid = { version = "1.3.0", features = ["v7", "serde"] }
 rand = "0.8.5"
 axum_garde = "0.11.2"
-chrono = "0.4.24"
 itertools = "0.10.5"
 eyre = "0.6.8"
 axum-extra = { version = "0.7.4" }
 time = "0.3.21"
 tower-cookies = { version = "0.9.0", features = ["private"] }
+tracing-appender = "0.2.2"
