--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,25 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = [".", "migration"]
+members = ["."]
 
 [workspace.dependencies]
-sea-orm = { version = "0.11.2", default-features = false, features = [
-    "runtime-tokio-rustls",
-    "sqlx-postgres",
-    "with-json",
-    "with-chrono",
-    "with-uuid",
-] }
 uuid = { version = "1.3.0", features = ["v7", "serde"] }
 chrono = "0.4.24"
 
 [dependencies]
-migration = { path = "migration" }
-
 uuid = { workspace = true }
 chrono = { workspace = true }
-sea-orm = { workspace = true }
 argon2 = { version = "0.4.1", features = ["parallel"] }
 async-trait = "0.1.66"
 aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
@@ -42,7 +32,6 @@ once_cell = "1.17.1"
 pin-project-lite = "0.2.9"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
-sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-rustls", "time"] }
 sync_wrapper = "0.1.2"
 tempfile = "3.4.0"
 thiserror = "1.0.38"
@@ -64,3 +53,6 @@ axum-extra = { version = "0.7.4" }
 time = "0.3.21"
 tower-cookies = { version = "0.9.0", features = ["private"] }
 tracing-appender = "0.2.2"
+diesel = { version = "2.0.4", features = ["postgres", "chrono", "uuid"] }
+diesel-async = { version = "0.2.2", features = ["tokio-postgres", "deadpool"] }
+diesel_migrations_async = { git = "https://github.com/aumetra/diesel_migrations_async", features = ["postgres"] }
