--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = ["."]
-
-[workspace.dependencies]
-uuid = { version = "1.3.0", features = ["v7", "serde"] }
-chrono = "0.4.24"
+# [workspace]
+# members = ["."]
 
 [dependencies]
-uuid = { workspace = true }
-chrono = { workspace = true }
+uuid = { version = "1.3.0", features = ["v7", "serde"] }
+chrono = "0.4.24"
 argon2 = { version = "0.4.1", features = ["parallel"] }
 async-trait = "0.1.66"
 aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
@@ -48,7 +44,6 @@ utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
 rand = "0.8.5"
 axum_garde = "0.11.2"
 itertools = "0.10.5"
-eyre = "0.6.8"
 axum-extra = { version = "0.7.4" }
 time = "0.3.21"
 tower-cookies = { version = "0.9.0", features = ["private"] }
