--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 
 [dependencies]
 uuid = { version = "1.3.0", features = ["v7", "serde"] }
-chrono = "0.4.24"
+chrono = { version = "0.4.24", features = ["serde"] }
 argon2 = { version = "0.4.1", features = ["parallel"] }
 async-trait = "0.1.66"
 aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
@@ -37,7 +37,7 @@ tower = "0.4.13"
 tower-http = { version = "0.4.0", features = ["trace", "limit", "cors"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b8", features = ["serde-compat", "uuid-impl"] }
+ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b8", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
 utoipa = { version = "3.1.0", features = ["axum_extras", "uuid"] }
 utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
 # v7 uuid allows for easier sorting
@@ -51,3 +51,6 @@ tracing-appender = "0.2.2"
 diesel = { version = "2.0.4", features = ["postgres", "chrono", "uuid"] }
 diesel-async = { version = "0.2.2", features = ["tokio-postgres", "deadpool"] }
 diesel_migrations_async = { git = "https://github.com/aumetra/diesel_migrations_async", features = ["postgres"] }
+
+[patch.crates-io]
+utoipa = { git = "https://github.com/juhaku/utoipa", rev = "b7020f44890e4472bc17c825f8db3455f30c27a4" }
