--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ aws-smithy-http = "0.54.4"
 axum = { version = "0.6.16", features = ["macros", "headers", "multipart"] }
 bytes = "1.4.0"
 derive_builder = "0.12.0"
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 futures = "0.3.26"
 futures-util = "0.3.26"
 garde = "0.11.2"
