--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"
 aws-sdk-s3 = "0.24.0"
 aws-smithy-http = "0.54.4"
 axum = { version = "0.6.16", features = ["macros", "headers", "multipart"] }
-bytes = "1.4.0"
+bytes = { version = "1.4.0", features = ["serde"] }
 derive_builder = "0.12.0"
 dotenvy = "0.15.7"
 futures = "0.3.26"
@@ -36,7 +36,7 @@ tower = "0.4.13"
 tower-http = { version = "0.4.0", features = ["trace", "limit", "cors"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b8", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
+ts-rs = { version = "7.1", features = ["serde-compat", "uuid-impl", "chrono-impl", "bytes-impl"] }
 utoipa = { version = "3.1.0", features = ["axum_extras", "uuid"] }
 utoipa-swagger-ui = { version = "3.1.0", features = ["axum"] }
 # v7 uuid allows for easier sorting
